# Olympus

./: .coderabbit.yaml  .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.peer.example  .gitattributes  .gitignore  .pnpmfile.cjs  .pre-commit-config.yaml  .prompt.md  .semgrepignore  AGENTS.md  ANALYSIS.md  ANALYSIS_README.md  ARCHITECTURE.md  ASSESSMENT.md  AUDIT_ASSESSMENT.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  DEMO.md  DEVELOPMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  GOVERNANCE.md  GRANTS.md  ISSUES.md  LICENSE-COMMERCIAL.md  MAINTAINERS.md  Makefile  NOTICE  OLYMPUS_OVERVIEW_2026.md  ONBOARDING.md  Olympus-Install-Windows.cmd  (+48 more)
clients/cli/: Cargo.toml  README.md
clients/cli/src/: args.rs  main.rs  scan.rs  server.rs
clients/cli/tests/: e2e.rs
clients/python/: README.md  pyproject.toml
clients/python/src/olympus_manifest/: __init__.py  cli.py  client.py  hashing.py  proof.py  smt.py
clients/python/tests/: test_parity.py  vectors.json
crates/babyjubjub-permissive/: Cargo.toml
crates/babyjubjub-permissive/examples/: gen_parity_vectors.rs  gen_rust_eddsa_vectors.rs
crates/babyjubjub-permissive/src/: compress.rs  curve.rs  eddsa.rs  field.rs  lib.rs  point.rs
crates/babyjubjub-permissive/tests/: parity.rs  parity_vectors.json  point_parity.rs  point_vectors.json
crates/light-poseidon/: Cargo.toml  PROVENANCE.md  bn254_x5_seed.json
crates/olympus-crypto/: Cargo.toml
crates/olympus-crypto/examples/: gen_redaction_vectors.rs  gen_ssmf_vectors.rs  smt_benchmark.rs
crates/olympus-crypto/src/: canonical.rs  ledger_snapshot.rs  lib.rs  merkle.rs  poseidon.rs  redaction.rs  request_envelope.rs  signature_envelope.rs  smt.rs
crates/olympus-crypto/src/smt/: tests.rs
crates/olympus-manifest/: Cargo.toml
crates/olympus-manifest/examples/: bench_manifest.rs  gen_python_vectors.rs
crates/olympus-manifest/src/: commit.rs  diff.rs  error.rs  lib.rs  proof.rs  smt_batch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_crypto_primitives.rs  fuzz_smt.rs  fuzz_smt_incremental.rs  fuzz_witness_cosig.rs
services/cdhs-smf-rust/: Cargo.toml  Dockerfile  README.md  build.rs
services/cdhs-smf-rust/fuzz/: Cargo.toml
services/cdhs-smf-rust/fuzz/fuzz_targets/: fuzz_canonicalize.rs  fuzz_compute_global_key.rs  fuzz_sign_root.rs  fuzz_smt_update.rs  fuzz_verify_inclusion.rs  fuzz_verify_non_inclusion.rs
services/cdhs-smf-rust/src/: canonicalization.rs  crypto.rs  lib.rs  main.rs  prepared.rs  proto.rs  smt.rs
services/cdhs-smf-rust/src/proto/: olympus.cdhs_smf.v1.rs
services/ingest-parser/: Dockerfile  README.md  pyproject.toml  requirements-lock.txt
services/ingest-parser/scripts/: download_models.py
services/ingest-parser/src/ingest_parser/: __init__.py  config.py  crypto.py  main.py  parser.py  schemas.py
services/ingest-parser/tests/: __init__.py  test_api.py  test_crypto.py  test_schemas.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_checkpoint_quorum_vectors.rs  smt_node_depth_histogram.rs  smt_packed_path_storage.rs  smt_persistent_benchmark.rs  smt_read_stress_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/src/: bootstrap.rs  commands.rs  db.rs  env.rs  ingest_provenance.rs  lib.rs  main.rs  merkle.rs  startup.rs  state.rs
src-tauri/src/anchoring/: api.rs  cron.rs  http_limits.rs  mod.rs  ots.rs  ots_format.rs  own_checkpoint.rs  rekor.rs  rfc3161.rs  store.rs  test_fixtures.rs  tstinfo.rs  upgrade_cron.rs
src-tauri/src/api/: admin.rs  admin_users.rs  auth.rs  checkpoint_bundle.rs  credentials.rs  documents.rs  error.rs  ingest.rs  keys.rs  ledger.rs  merkle.rs  mod.rs  pagination.rs  public_stats.rs  redaction.rs  shards.rs  smt_stats.rs  state.rs  trusted_issuers.rs  user_auth.rs  validation.rs  zk.rs
src-tauri/src/api/credentials/: crypto.rs  issue.rs  mod.rs  quorum.rs  read.rs  revoke.rs  types.rs  verify.rs
src-tauri/src/api/ingest/: files.rs  mod.rs  proof_verify.rs  read.rs  zk_bundle.rs
src-tauri/src/api/keys/: admin.rs  common.rs  mod.rs  signing.rs
src-tauri/src/api/ledger/: mod.rs  read.rs  simple.rs
src-tauri/src/api/middleware/: auth.rs  mod.rs  signed_request.rs
src-tauri/src/api/redaction/: bundle_v3.rs  issue.rs  (+7 more)
src-tauri/src/db/: mod.rs
src-tauri/src/federation/: api.rs  checkpoint.rs  cosign.rs  equivocation.rs  gossip.rs  mod.rs  peer.rs  tor.rs  verify.rs
src-tauri/src/integrity/: batch.rs  single.rs
src-tauri/src/quorum/: checkpoint.rs  mod.rs
src-tauri/src/routes/: mod.rs  public_stats.rs
src-tauri/src/server/: handlers.rs  mod.rs  routes.rs
src-tauri/src/smt/: backend.rs  mod.rs  tree.rs
src-tauri/src/zk/: bridge.rs  chunk.rs  commands.rs  field_validation.rs  manifest.rs  mod.rs  pdf_describe.rs  pdf_objects.rs  pedersen.rs  poseidon.rs  proof.rs  prove.rs  redact.rs  redaction_import.rs  redaction_issue.rs  redaction_tile.rs  segment.rs  snapshot.rs  verify.rs  vkey.rs  zkey.rs
src-tauri/tests/: api_admin_users.rs  api_admin_users_db.rs  api_anchors_db.rs  api_cors_preflight.rs  api_credentials_db.rs  api_db.rs  api_ledger_db.rs  api_public_stats_db.rs  api_redaction_db.rs  api_user_auth_db.rs  api_zk_verify_db.rs  checkpoint_transition_attestation.rs  e2e_http.rs  federation_equivocation.rs  smt_pg_backend.rs  snapshot_cross_crate_parity.rs  zk_prove_existence.rs  zk_prove_non_existence.rs  zk_prove_redaction.rs  zk_prove_unified.rs  zk_soundness.rs  zk_soundness_false_statement.rs  zk_witness_proptest.rs
src-tauri/tests/api_db/: admin_users.rs  anchors.rs  credentials.rs  ledger.rs  public_stats.rs  redaction.rs  shards.rs  signing_keys.rs  user_auth.rs  zk_verify.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/zk_fixtures/: mod.rs
verifiers/rust/: Cargo.toml  README.md
verifiers/rust/benches/: verification.rs
verifiers/rust/fuzz/: Cargo.toml
verifiers/rust/olympus-matcher/: Cargo.toml  README.md  pyproject.toml
verifiers/rust/src/: groth16.rs  lib.rs  pedersen.rs  redaction.rs  redaction_tile.rs
(+1206 files in other folders)
