# Virtual workspace root. The former `olympus-core` PyO3 extension crate that
# lived here was removed — it had no consumers (the Python `protocol/` package
# was retired, nothing imported the extension), and its crypto lived in
# duplicate in `olympus-crypto` (canonical/poseidon/SMT) and `src-tauri`
# (groth16/witness verification). Shared crypto now lives solely in
# `crates/olympus-crypto`.
[workspace]
members = [
    "src-tauri",
    "crates/olympus-crypto",
    "crates/light-poseidon",
    "crates/babyjubjub-permissive",
]
exclude = [
    "verifiers/rust",
    "services/cdhs-smf-rust",
    "fuzz",
    # Vendored upstream — referenced via `[patch.crates-io]` only; never
    # a first-class workspace member. Keeps `cargo {test,llvm-cov,clippy}
    # --workspace` from compiling glib's own test/bench targets (which
    # need a live GLib runtime + dbus to pass) and from polluting our
    # coverage numbers with upstream FFI glue (which CodeQL also flags;
    # `.github/codeql/codeql-config.yml` excludes the same paths).
    "crates/glib-0.18.5-patched",
    # Same rationale for the vendored pg_embed fork: it's a path dependency of
    # `src-tauri` (so it builds as a library), but as an *implicit* workspace
    # member `cargo test --workspace` was also running its own lifecycle /
    # database / doctest targets — each of which downloads and spawns a real
    # PostgreSQL with a startup deadline. Under the full pre-push run those
    # deadlines lose the CPU race and flake (PgTimedOutError) on Windows.
    # Olympus's own DB behaviour is covered by `src-tauri`'s `api_*_db.rs`
    # integration tests; the vendored crate's tests don't belong in our gate.
    "pg-embed-local",
]
resolver = "2"

# Backport of gtk-rs/gtk-rs-core#1343 (GHSA-wrw7-89jp-8q8g) onto the glib
# 0.18.5 line that Tauri's webkit2gtk-4.1 / GTK 0.18 stack pins. The
# vendored crate at `crates/glib-0.18.5-patched/` is byte-identical to
# the upstream 0.18.5 release except for the 2-line fix in
# `src/variant_iter.rs`. Retire this `[patch]` (and delete the vendored
# crate) as soon as Tauri ships a webkit2gtk binding using glib ≥ 0.20.
# See `crates/glib-0.18.5-patched/PROVENANCE.md` and issue #948.
[patch.crates-io]
glib = { path = "crates/glib-0.18.5-patched" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
