[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus"
version = "0.1.0"
description = "Append-only public ledger for government documents with cryptographic guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"  # SPDX string (fixes setuptools deprecation)
authors = [
    {name = "Olympus Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "blake3==0.4.1",
    "PyNaCl==1.5.0",
    "fastapi==0.109.1",
    "uvicorn[standard]==0.27.0",
    "psycopg[binary]==3.2.13",
    "pydantic==2.5.0",
    "jinja2==3.1.6",
    "rfc3161ng==2.1.3",
    "pikepdf==10.3.0",
    "lxml==6.0.2",
    "poseidon-py==0.1.5",
    "boto3==1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==7.0.0",
    "hypothesis==6.120.0",
    "ruff==0.1.0",
    "mypy==1.8.0",
    "pre-commit==3.7.0",
    "httpx==0.26.0",
    "jsonschema==4.20.0",
    "coverage==7.10.6",
    "bandit==1.9.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Flat repo layout: discover from repo root
where = ["."]
# Explicitly include your first-party pkgs to avoid "Multiple top-level packages" error
include = [
    "api*",
    "app_testonly*",
    "protocol*",
    "schemas*",
    "storage*",
    "proofs*",
]
# Common excludes not meant for distribution wheels
exclude = [
    "tests*",
    "migrations*",
    "docs*",
    "scripts*",
    "examples*",
    "tools*",
]

[tool.ruff]
# Adjust to your supported runtime(s)
target-version = "py310"
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "UP", # pyupgrade
]
ignore = [
  "E501",  # allow lines longer than 100 chars for now
]
fixable = ["E", "W", "F", "I", "UP"]
unfixable = []

[tool.ruff.lint.isort]
# Ensure first-party modules are grouped correctly after stdlib and third-party.
known-first-party = ["app_testonly", "api", "protocol", "storage", "tests"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "postgres: marks tests as requiring PostgreSQL (deselect with '-m \"not postgres\"')",
]

[tool.coverage.run]
source = ["protocol", "storage", "api", "app_testonly"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "blake3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nacl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rfc3161ng.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pikepdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "poseidon_py.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (assertions are fine in tests)
