[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus"
version = "1.0.0"
description = "Append-only public ledger for government documents with cryptographic guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"  # SPDX string (fixes setuptools deprecation)
authors = [
    {name = "Olympus Contributors"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "blake3==1.0.8",
    "PyNaCl==1.6.2",
    "fastapi==0.135.1",
    "starlette==0.52.1",
    "uvicorn[standard]==0.41.0",
    "psycopg[binary]==3.3.3",
    "psycopg-pool==3.3.0",
    "pydantic==2.12.5",
    "jinja2==3.1.6",
    "rfc3161ng==2.1.3",
    "pikepdf==10.5.0",
    "lxml==6.0.2",
    "poseidon-py==0.1.5",
    "boto3==1.42.66",
    "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "hypothesis==6.151.9",
    "ruff==0.15.5",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "httpx==0.28.1",
    "jsonschema==4.26.0",
    "coverage==7.13.4",
    "bandit==1.9.4",
]
observability = [
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "prometheus-client==0.24.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Flat repo layout: discover from repo root
where = ["."]
# Explicitly include your first-party pkgs to avoid "Multiple top-level packages" error
include = [
    "api*",
    "app_testonly*",
    "protocol*",
    "schemas*",
    "storage*",
    "proofs*",
    "integrations*",
]
# Common excludes not meant for distribution wheels
exclude = [
    "tests*",
    "migrations*",
    "docs*",
    "scripts*",
    "examples*",
    "tools*",
]

[tool.ruff]
# Adjust to your supported runtime(s)
target-version = "py310"
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort (import sorting)
  "UP", # pyupgrade
]
ignore = [
  "E501",  # allow lines longer than 100 chars for now
]
fixable = ["E", "W", "F", "I", "UP"]
unfixable = []

[tool.ruff.lint.isort]
# Ensure first-party modules are grouped correctly after stdlib and third-party.
known-first-party = ["app_testonly", "api", "protocol", "storage", "tests"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "postgres: marks tests as requiring PostgreSQL (deselect with '-m \"not postgres\"')",
    "smoke: marks tests as part of the fast smoke suite (critical path only)",
    "slow: marks long-running or nightly scenarios",
]

[tool.coverage.run]
source = ["protocol", "storage", "api", "app_testonly"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "storage/postgres.py",
    "protocol/poseidon_js.py",
    "api/app.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "blake3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nacl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rfc3161ng.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pikepdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "poseidon_py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (assertions are fine in tests)
