[package]
name = "olympus-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
olympus-core = { path = ".." }
olympus-crypto = { path = "../crates/olympus-crypto" }
ed25519-dalek = "2.2.0"

# Override the parent crate's panic = "abort" so libfuzzer can unwind on crashes.
[profile.release]
panic = "unwind"
opt-level = 3
debug = false
lto = false

[[bin]]
name = "fuzz_crypto_primitives"
path = "fuzz_targets/fuzz_crypto_primitives.rs"
test = false
doc = false

[[bin]]
name = "fuzz_smt_incremental"
path = "fuzz_targets/fuzz_smt_incremental.rs"
test = false
doc = false

[[bin]]
name = "fuzz_witness_cosig"
path = "fuzz_targets/fuzz_witness_cosig.rs"
test = false
doc = false
