[package]
name = "olympus-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
olympus-crypto = { path = "../crates/olympus-crypto", features = ["smt"] }

# libfuzzer needs to unwind on crashes (the workspace excludes this crate, so it
# does not inherit the release profile's panic = "abort").
[profile.release]
panic = "unwind"
opt-level = 3
debug = false
lto = false

[[bin]]
name = "fuzz_crypto_primitives"
path = "fuzz_targets/fuzz_crypto_primitives.rs"
test = false
doc = false

[[bin]]
name = "fuzz_smt"
path = "fuzz_targets/fuzz_smt.rs"
test = false
doc = false
