[package]
name = "olympus-desktop"
version = "0.1.0"
edition = "2021"
description = "Olympus Ledger — native desktop shell (Tauri 2)"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }

# Auth / key hashing
blake3 = "1"
hex = "0.4"

# Password hashing (scrypt — identical params to Python's hashlib.scrypt)
scrypt = "0.11"
subtle = "2"           # constant-time comparison for password verify
rand = "0.8"           # CSPRNG for salts / raw key material

# Ed25519 signing-key possession proofs
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Rate limiting — governor uses DefaultClock (std::time::Instant).
# On WSL2, system-clock drift versus the Windows host can cause transient
# 429s on all keys.  Fix: `sudo hwclock -s` to re-sync the realtime clock.
governor = "0.6"

# Timestamps & UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HMAC-SHA256 (admin registration-approval signatures)
hmac = "0.12"
sha2 = "0.10"

# Typed errors
thiserror = "1"

# Structured logging (Axum ecosystem standard)
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

# Profile settings for member crates must live in the workspace root Cargo.toml.
# strip = true is set there via [profile.release.package.olympus-desktop].
