[package]
name = "olympus-desktop"
version = "0.1.0"
edition = "2021"
description = "Olympus Ledger — native desktop shell (Tauri 2)"
license = "Apache-2.0"
default-run = "olympus-desktop"

[[bin]]
name = "olympus-desktop"
path = "src/main.rs"

[lib]
name = "olympus_tauri_lib"
path = "src/lib.rs"

[features]
default = ["prover"]
prover = []
federation = ["dep:arti-client", "dep:tor-rtcompat", "dep:tor-hsservice", "dep:tor-cell", "dep:futures", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tower-service"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["multipart"] }

olympus-crypto = { path = "../crates/olympus-crypto", features = ["poseidon"] }
num-bigint = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

# ── ZK prover / verifier (in-process — no Node.js required) ─────────────────
# All ark-* pinned to 0.6.x to match the workspace root and olympus-crypto.
# light-poseidon is vendored as a workspace member at crates/light-poseidon/ —
# the upstream 0.4.0 release is still pinned to ark-* 0.5, so the vendored copy
# has its Cargo.toml bumped to 0.6.  The Poseidon hash output is byte-identical
# (verified by the upstream doctest hash_bytes_be([[1;32], [2;32]]) == [13,84,…]).
# Removing tracing-subscriber from the dep tree as ark-circom 0.6 dropped it,
# resolving RUSTSEC-2025-0055.
ark-bn254     = "=0.6.0"
ark-groth16   = { version = "=0.6.0", features = ["r1cs"] }
ark-ff        = "=0.6.0"
ark-ec        = "=0.6.0"
ark-serialize = "=0.6.0"
ark-relations = "=0.6.0"
ark-snark     = "=0.6.0"
light-poseidon = { path = "../crates/light-poseidon" }
ark-circom = "=0.6.0"
# Baby Jubjub EdDSA-Poseidon signer — iden3 reference port (circomlib-compatible).
# ff_ce bridges iden3 Fr ↔ arkworks Fr (same BN254 scalar field, different wrappers).
babyjubjub-rs = "0.0.11"
ff_ce = { version = "0.11", features = ["derive"] }
color-eyre = "0.6"
anyhow = "1"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }

# Embedded PostgreSQL — downloads PG 15 binaries on first launch; port 5433
# avoids conflicts with dev instances on the default 5432.
pg-embed = { path = "../pg-embed-local", features = ["rt_tokio"] }

# Auth / key hashing
blake3 = "1"
hex = "0.4"

# Password hashing (scrypt — identical params to Python's hashlib.scrypt)
scrypt = "0.11"
subtle = "2"           # constant-time comparison for password verify
rand = "0.8"           # CSPRNG for salts / raw key material

# Ed25519 signing-key possession proofs
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Rate limiting — governor uses DefaultClock (std::time::Instant).
# On WSL2, system-clock drift versus the Windows host can cause transient
# 429s on all keys.  Fix: `sudo hwclock -s` to re-sync the realtime clock.
governor = "0.6"

# Timestamps & UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HMAC-SHA256 (admin registration-approval signatures)
hmac = "0.12"
sha2 = "0.10"

# Unicode normalization (NFC) for canonicalizing shard/record IDs in ingest.rs
unicode-normalization = "0.1"

# Typed errors
thiserror = "1"

# Structured logging (Axum ecosystem standard)
tracing = "0.1"

# ── P2P federation (optional — behind `federation` feature) ────────────────
# Pure-Rust Tor client for hidden service + outbound .onion connections.
arti-client = { version = "0.27", optional = true, default-features = false, features = ["tokio", "native-tls", "onion-service-service"] }
tor-rtcompat = { version = "0.27", optional = true, default-features = false, features = ["tokio"] }
tor-hsservice = { version = "0.27", optional = true }
tor-cell = { version = "0.27", optional = true }
futures = { version = "0.3", optional = true }
hyper = { version = "1", optional = true, features = ["client", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["client-legacy", "tokio"] }
http-body-util = { version = "0.1", optional = true }
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

# Profile settings for member crates must live in the workspace root Cargo.toml.
# strip = true is set there via [profile.release.package.olympus-desktop].
