[package]
name = "olympus-desktop"
version = "0.9.5"
edition = "2021"
description = "Olympus Ledger — native desktop shell (Tauri 2)"
license = "Apache-2.0"
default-run = "olympus-desktop"
# The desktop application binary — never published to crates.io. Required
# so `cargo deny`'s bans check exempts its versionless workspace path
# dependencies (allow-wildcard-paths only applies to unpublishable crates).
publish = false

[[bin]]
name = "olympus-desktop"
path = "src/main.rs"

# snarkjs `.zkey` → arkworks `.ark.zkey` exporter. Uses `ark_circom::read_zkey`,
# so it only compiles when the `prover` feature (which pulls in `ark-circom`) is
# enabled.
[[bin]]
name = "export_ark_zkey"
path = "src/bin/export_ark_zkey.rs"
required-features = ["prover"]

[lib]
name = "olympus_tauri_lib"
path = "src/lib.rs"

[features]
default = ["prover"]
# Compiles the in-process Groth16 prover. Gating `ark-circom` (and therefore
# its transitive `wasmer`/`cranelift`/`wasmparser`/`regalloc2` stack) behind
# this feature lets the common (non-prover) CI test path skip building it,
# cutting build time. `default = ["prover"]` keeps default/production builds
# byte-identical to before.
prover = ["dep:ark-circom"]
# Opt-in: the federation M-of-N quorum Groth16 circuit (`federation_quorum`).
# Next-phase, mirroring the `unified-circuit` gate: the circuit is authored and
# wired but its trusted-setup ceremony has not been run, so the vkey is a
# placeholder. When OFF (default) the ZK quorum *attestation* is never built or
# verified and the placeholder artifact is excluded from the production startup
# check. The authoritative M-of-N mechanism — the explicit BJJ signature set in
# `crate::quorum` — is always compiled in regardless of this flag, so quorum
# credentials still issue and verify without it. `proofs/setup_circuits.sh`
# builds the artifact regardless; gating is Rust-only.
quorum-circuit = []
# `federation` implies `prover`: the checkpoint gossip path calls
# `prove_existence` unconditionally, so a federation build must always carry a
# valid prove path.
federation = ["prover", "dep:arti-client", "dep:tor-rtcompat", "dep:tor-hsservice", "dep:tor-cell", "dep:futures", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tower-service"]
# Diagnostic-only: synthesize the CircomCircuit into a fresh ConstraintSystem
# before Groth16::prove and run is_satisfied()/which_is_unsatisfied(). Used to
# pin down #1011 (existence round-trip): does the witness actually satisfy the
# R1CS, or is the bug downstream in the prove path? Off in default builds —
# adds an O(constraints) clone + synthesis on every prove call.
zk-debug = []
# Opt-in: exposes the `from_proving_key_for_tests` /
# `proving_key_for_tests` escape hatches on `CircomProvingKey` for
# integration tests that need to inspect or wrap a raw ark-groth16
# `ProvingKey` (e.g. the #1011 side-by-side parity diagnostic in
# `tests/zk_prove_existence.rs`). Off in default builds so the
# audit-M-5 newtype seal cannot be peeled off in production. Tests
# that require the hatch declare `required-features = ["zk-test-utils"]`
# under `[[test]]`. CodeRabbit follow-up on PR #1076.
zk-test-utils = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
# CEREMONY_INTEGRITY.md check #1: build.rs hashes each circuit's vkey
# JSON and asserts it matches the embedded ceremony manifest's claimed
# blake3. Both deps are also runtime deps further down; listing them
# under build-dependencies makes them available to build.rs without
# the runtime crate having to expose them.
blake3 = "1"
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
# Native file picker — used by the `open_file_dialog` IPC command so the
# frontend can offer "OPEN FILE…" alongside the (sandboxed-to-home) HTML
# `<input type="file">`. The GTK chooser this opens under WSLg navigates to
# /mnt/c/... without manual path entry.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["multipart"] }

olympus-crypto = { path = "../crates/olympus-crypto", features = ["poseidon", "canonical", "snapshot", "smt"] }
num-bigint = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

# ── ZK prover / verifier (in-process — no Node.js required) ─────────────────
# All ark-* pinned to 0.6.x to match the workspace root and olympus-crypto.
# light-poseidon is vendored as a workspace member at crates/light-poseidon/ —
# the upstream 0.4.0 release is still pinned to ark-* 0.5, so the vendored copy
# has its Cargo.toml bumped to 0.6.  The Poseidon hash output is byte-identical
# (verified by the upstream doctest hash_bytes_be([[1;32], [2;32]]) == [13,84,…]).
# Removing tracing-subscriber from the dep tree as ark-circom 0.6 dropped it,
# resolving RUSTSEC-2025-0055.
ark-bn254     = "=0.6.0"
ark-groth16   = { version = "=0.6.0", features = ["r1cs"] }
ark-ff        = "=0.6.0"
ark-ec        = "=0.6.0"
ark-serialize = "=0.6.0"
ark-relations = "=0.6.0"
ark-snark     = "=0.6.0"
light-poseidon = { path = "../crates/light-poseidon" }
ark-circom = { version = "=0.6.0", optional = true }
# Baby Jubjub EdDSA-Poseidon signer — in-repo, permissively licensed
# (Apache-2.0) circomlib-compatible implementation. Replaces `babyjubjub-rs`
# (whose transitive `poseidon-rs` dependency is GPL-3.0); the permissive crate
# is byte-for-byte compatible with the iden3 reference, so existing SBT /
# checkpoint signatures and persisted authority pubkeys remain valid. Point
# coordinates are `ark_bn254::Fr`, so no iden3↔arkworks field bridge is needed.
babyjubjub-permissive = { path = "../crates/babyjubjub-permissive" }
color-eyre = "0.6"
anyhow = "1"
# Stream combinators used by the admin CSV export (`Body::from_stream`).
# `default-features = false` keeps this small — we just need StreamExt.
# Audit finding F-6.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# `async_stream::try_stream!` lets the CSV exporter yield a header line
# plus per-row CSV chunks while the sqlx `fetch()` cursor streams from
# Postgres — bounding peak memory regardless of `max_rows`. Audit F-6.
async-stream = "0.3"
# Heap-zeroing wrapper used for the one-shot bootstrap secrets passed to the
# frontend via `take_initial_secrets`. Drop on `Zeroizing<String>` calls
# `zeroize()` on the backing buffer before `dealloc`, instead of `String`'s
# default Drop which just frees memory without scrubbing. Defense-in-depth
# for the only copy of those secrets we still control on the Rust side
# after the IPC handoff. Audit finding F-4.
#
# No `features = ["derive"]` — we only use the `Zeroizing<T>` wrapper, never
# `#[derive(Zeroize)]` on a custom struct. CodeRabbit nit, trim the deps.
zeroize = "1.8"
tower-http = { version = "0.6", features = ["cors", "timeout"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "migrate"] }
# `url` is already in the dep tree (via reqwest); promote to direct so we can
# parse anchor URLs by component in `anchoring::validate_anchor_url`.
url = "2"

# Embedded PostgreSQL — downloads PG 15 binaries on first launch; port 5433
# avoids conflicts with dev instances on the default 5432.
pg-embed = { path = "../pg-embed-local", features = ["rt_tokio"] }

# Auth / key hashing
blake3 = "1"
hex = "0.4"
# Base64 encoding for anchoring payloads (Rekor request bodies + receipt
# JSON envelopes). Same crate version the broader Rust ecosystem uses;
# explicit engine import avoids the deprecated v0.13-style API.
base64 = "0.22"

# Password hashing (scrypt — identical params to Python's hashlib.scrypt)
scrypt = "0.12"
subtle = "2"           # constant-time comparison for password verify
rand = "0.8"           # CSPRNG for salts / raw key material
# Audit L-21: this crate "owns" rand_core 0.6.4 (pulled transitively via
# `rand = "0.8"` and `ark-* = 0.6`). The lockfile lists additional
# rand_core versions (0.3.1, 0.4.2, 0.9.5, 0.10.1) brought in by
# unrelated transitive deps (`getrandom`, tor stack, etc). Rust's
# coherence rules keep the types disjoint across semver-incompatible
# versions, so there is no risk of a 0.9 `CryptoRng` being silently
# accepted where 0.6 is expected — the compiler refuses. Underlying
# entropy is OS-supplied (`getrandom`) in every case, so the source is
# uniform regardless of which wrapper a given crate uses. When sharing
# an RNG between Olympus modules, stick to the 0.6.4 surface.

# Ed25519 signing-key possession proofs
ed25519-dalek = { version = "2", features = ["rand_core"] }

# ECDSA-P-256 for verifying Sigstore Rekor's signedEntryTimestamp (audit M-A2).
# Already in the transitive lock from ethers-core; promoted to a direct dep so
# the anchoring layer doesn't depend on an unrelated crate's continued use.
p256 = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pem", "pkcs8"] }
ecdsa = { version = "0.16", default-features = false, features = ["der"] }
signature = "3"
spki = { version = "0.8", features = ["pem"] }

# Rate limiting — governor uses DefaultClock (std::time::Instant).
# On WSL2, system-clock drift versus the Windows host can cause transient
# 429s on all keys.  Fix: `sudo hwclock -s` to re-sync the realtime clock.
governor = "0.10"

# Timestamps & UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HMAC-SHA256 (admin registration-approval signatures)
hmac = "0.12"
sha2 = "0.10"

# RFC 3161 TimeStampResp / TstInfo DER parsing for the anchoring path
# (audit M-A1 follow-up: verify messageImprint actually binds to our hash
# and nonce matches exactly, not just substring-echo). x509-tsp pulls in
# `cms`, `x509-cert`, and `der` transitively — all RustCrypto Apache-2.0/MIT,
# deny.toml-clean. We use this read-only on TSA responses; no signing.
der = "0.7"
cms = "0.2"
x509-tsp = "0.1"

# Unicode normalization (NFC) for canonicalizing shard/record IDs in ingest.rs
unicode-normalization = "0.1"

# Typed errors
thiserror = "2"

# Structured logging (Axum ecosystem standard)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── P2P federation (optional — behind `federation` feature) ────────────────
# Pure-Rust Tor client for hidden service + outbound .onion connections.
arti-client = { version = "0.31", optional = true, default-features = false, features = ["tokio", "native-tls", "onion-service-service"] }
# Must match the version arti-client (0.31) depends on: `tor.rs` names
# `tor_rtcompat::PreferredRuntime` directly, and that type has to be the
# same crate version arti returns from `TorClient::create_bootstrapped`.
# A mismatched pin (the earlier "0.42") put two tor-rtcompat versions in
# the graph and the runtime types failed to unify. `native-tls` (matching
# arti-client) is required for `PreferredRuntime` to exist — it's gated
# behind `any(native-tls, rustls)`.
tor-rtcompat = { version = "0.31", optional = true, default-features = false, features = ["tokio", "native-tls"] }
tor-hsservice = { version = "0.31", optional = true }
tor-cell = { version = "0.31", optional = true }
futures = { version = "0.3", optional = true }
hyper = { version = "1", optional = true, features = ["client", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["client-legacy", "tokio"] }
http-body-util = { version = "0.1", optional = true }
tower-service = { version = "0.3", optional = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
# HTTP mocking for anchoring/* submit() tests.
wiremock = "0.6"

# The #1011 diagnostic test uses the `CircomProvingKey::from_proving_key_for_tests`
# and `proving_key_for_tests` escape hatches to compare two zkey-load paths.
# Those methods are gated behind `zk-test-utils` so the audit-M-5 newtype seal
# isn't bypassable in production builds. Cargo will skip this test target
# unless `cargo test --features zk-test-utils` is in effect.
# The zk_prove_* integration tests exercise the in-process Groth16 prover
# (`crate::zk::prove`), which only compiles under the `prover` feature. They
# also use the `zk-test-utils` escape hatches. Cargo skips these targets unless
# both features are enabled (e.g. `cargo test --features prover,zk-test-utils`).
[[test]]
name = "zk_prove_existence"
path = "tests/zk_prove_existence.rs"
required-features = ["prover", "zk-test-utils"]

[[test]]
name = "zk_prove_non_existence"
path = "tests/zk_prove_non_existence.rs"
required-features = ["prover", "zk-test-utils"]

[[test]]
name = "zk_prove_redaction"
path = "tests/zk_prove_redaction.rs"
required-features = ["prover", "zk-test-utils"]

[[test]]
name = "zk_prove_unified"
path = "tests/zk_prove_unified.rs"
required-features = ["prover", "zk-test-utils"]

# Profile settings for member crates must live in the workspace root Cargo.toml.
# strip = true is set there via [profile.release.package.olympus-desktop].
